Correcting the killDatabase call